examples/c/error-codes/violates-constraint/fatal/CV-CER5-bad-static.output
CV-CER5-bad-static.c:3:7: error: address of bit-field requested
      &t.m;
      ^~~~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
